--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.museresponsive.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://SpartanHackers.com/phone/index.html"/>
@@ -24,12 +24,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=27622843"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4213575294" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4130108508"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4253282489" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=365003025"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3857171035" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3893296755"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4074340018" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -51,7 +51,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <a class="nonblock nontext MuseLinkActive clip_frame" id="u270" href="index.html"><!-- svg --><img class="svg svg_mar temp_no_img_src" id="u265" data-orig-src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*80.18803418803414/177.01886792452825)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="177" data-image-height="80" src="images/blank.gif?crc=4208392903"/></a>
-    <img class="grpelem temp_no_img_src" id="u706-4" alt="Welcome to Spartan Hackers Website" data-orig-src="images/u706-4.png?crc=444770488" data-image-width="1395" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+    <img class="grpelem temp_no_img_src" id="u706-4" alt="Welcome to Spartan Hackers Website" data-orig-src="images/u706-4.png?crc=4236856848" data-image-width="1307" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     <nav class="MenuBar clearfix" id="menuu94"><!-- horizontal box -->
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u95"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox rgba-background clearfix colelem" id="u96" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u98-4"><!-- rasterized frame --><div id="u98-4_clip"><img class="temp_no_img_src" alt="Home" data-orig-src="images/u98-4.png?crc=3848492547" data-image-width="199" src="images/blank.gif?crc=4208392903"/></div></div></a>
@@ -66,16 +66,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem" id="u722" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u723-4"><!-- rasterized frame --><div id="u723-4_clip"><img class="temp_no_img_src" alt="Contact" data-orig-src="images/u723-4.png?crc=3951033455" data-image-width="199" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem" id="u238" href="media.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u239-4"><!-- rasterized frame --><div id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=4147028457" data-image-width="185" src="images/blank.gif?crc=4208392903"/></div></div><div class="borderbox grpelem" id="u240"><!-- content --></div></a>
-      <div class="SubMenu MenuLevel1 borderbox clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView borderbox rgba-background clearfix colelem" id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer borderbox clearfix colelem" id="u480"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u482" href="photos.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u486-4"><!-- rasterized frame --><div id="u486-4_clip"><img class="temp_no_img_src" alt="Photos" data-orig-src="images/u486-4.png?crc=307953479" data-image-width="192" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-        <li class="MenuItemContainer borderbox clearfix colelem" id="u501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem" id="u502" href="videos.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u505-4"><!-- rasterized frame --><div id="u505-4_clip"><img class="temp_no_img_src" alt="Videos" data-orig-src="images/u505-4.png?crc=196056032" data-image-width="195" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-       </ul>
-      </div>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem" id="u238" href="media.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u239-4"><!-- rasterized frame --><div id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=104423217" data-image-width="199" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
     </nav>
-    <div class="verticalspacer" data-offset-top="515" data-content-above-spacer="604" data-content-below-spacer="87"></div>
+    <div class="verticalspacer" data-offset-top="515" data-content-above-spacer="539" data-content-below-spacer="87"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_970" data-max-width="970"><!-- responsive breakpoint node -->
@@ -91,7 +85,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <a class="nonblock nontext MuseLinkActive clip_frame temp_no_id" href="index.html" data-orig-id="u270"><!-- svg --><img class="svg svg_mar temp_no_id temp_no_img_src" data-orig-src="images/sh-logo.svg?crc=459609236" onload="this.style.height=(this.offsetWidth*40.51166310541307/89.43140723270439)+'px'" alt="" data-mu-svgfallback="images/sh%20logo_poster_.png?crc=176574039" data-image-width="89" data-image-height="41" data-orig-id="u265" src="images/blank.gif?crc=4208392903"/></a>
-    <img class="grpelem temp_no_id temp_no_img_src" alt="Welcome to Spartan Hackers Website" data-orig-src="images/u706-42.png?crc=4165132204" data-image-width="753" data-orig-id="u706-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+    <img class="grpelem temp_no_id temp_no_img_src" alt="Welcome to Spartan Hackers Website" data-orig-src="images/u706-42.png?crc=20939786" data-image-width="665" data-orig-id="u706-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
     <nav class="MenuBar clearfix temp_no_id" data-orig-id="menuu94"><!-- horizontal box -->
      <div class="MenuItemContainer borderbox clearfix grpelem temp_no_id" data-orig-id="u95"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox rgba-background clearfix colelem temp_no_id" href="index.html" data-orig-id="u96"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u98-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u98-4_clip"><img class="temp_no_img_src" alt="Home" data-orig-src="images/u98-4.png?crc=3848492547" data-image-width="99" src="images/blank.gif?crc=4208392903"/></div></div></a>
@@ -106,16 +100,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem temp_no_id" href="contact.html" data-orig-id="u722"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u723-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u723-4_clip"><img class="temp_no_img_src" alt="Contact" data-orig-src="images/u723-4.png?crc=3951033455" data-image-width="100" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem temp_no_id" data-orig-id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem temp_no_id" href="media.html" data-orig-id="u238"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u239-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=4147028457" data-image-width="86" src="images/blank.gif?crc=4208392903"/></div></div><div class="borderbox grpelem temp_no_id" data-orig-id="u240"><!-- content --></div></a>
-      <div class="SubMenu MenuLevel1 borderbox clearfix temp_no_id" data-orig-id="u242"><!-- vertical box -->
-       <ul class="SubMenuView borderbox rgba-background clearfix colelem temp_no_id" data-orig-id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u480"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem temp_no_id" href="photos.html" data-orig-id="u482"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u486-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u486-4_clip"><img class="temp_no_img_src" alt="Photos" data-orig-src="images/u486-4.png?crc=307953479" data-image-width="92" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-        <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix grpelem temp_no_id" href="videos.html" data-orig-id="u502"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u505-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u505-4_clip"><img class="temp_no_img_src" alt="Videos" data-orig-src="images/u505-4.png?crc=196056032" data-image-width="95" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-       </ul>
-      </div>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox rgba-background clearfix colelem temp_no_id" href="media.html" data-orig-id="u238"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u239-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=104423217" data-image-width="100" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
     </nav>
-    <div class="verticalspacer" data-offset-top="595" data-content-above-spacer="684" data-content-below-spacer="58"></div>
+    <div class="verticalspacer" data-offset-top="595" data-content-above-spacer="635" data-content-below-spacer="58"></div>
    </div>
   </div>
   <!-- Other scripts -->
