--- a/photos.html
+++ b/photos.html
@@ -16,19 +16,19 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "photos.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "photos.css"], "outOfDate":[]};
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://SpartanHackers.com/phone/photos.html"/>
   <title>Photos</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=27622843"/>
-  <link rel="stylesheet" type="text/css" href="css/photos.css?crc=3992729016" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4130108508"/>
+  <link rel="stylesheet" type="text/css" href="css/photos.css?crc=4242628106" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=365003025"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_photos.css?crc=4149959934" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3893296755"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_photos.css?crc=4113796568" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -120,13 +120,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u722" href="contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u723-4"><!-- rasterized frame --><div id="u723-4_clip"><img class="temp_no_img_src" alt="Contact" data-orig-src="images/u723-4.png?crc=3951033455" data-image-width="199" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u238" href="media.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u239-4"><!-- rasterized frame --><div id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=4147028457" data-image-width="185" src="images/blank.gif?crc=4208392903"/></div></div><div class="borderbox grpelem" id="u240"><!-- content --></div></a>
-      <div class="SubMenu MenuLevel1 borderbox clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView borderbox clearfix colelem" id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer borderbox clearfix colelem" id="u480"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix grpelem" id="u482" href="photos.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u486-4"><!-- rasterized frame --><div id="u486-4_clip"><img class="temp_no_img_src" alt="Photos" data-orig-src="images/u486-4.png?crc=307953479" data-image-width="192" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-        <li class="MenuItemContainer borderbox clearfix colelem" id="u501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u502" href="videos.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u505-4"><!-- rasterized frame --><div id="u505-4_clip"><img class="temp_no_img_src" alt="Videos" data-orig-src="images/u505-4.png?crc=196056032" data-image-width="195" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-       </ul>
-      </div>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u238" href="media.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u239-4"><!-- rasterized frame --><div id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=104423217" data-image-width="199" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
     </nav>
     <div class="verticalspacer shared_content" data-offset-top="711" data-content-above-spacer="716" data-content-below-spacer="58" data-content-guid="page_4_content"></div>
@@ -215,13 +209,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="contact.html" data-orig-id="u722"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u723-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u723-4_clip"><img class="temp_no_img_src" alt="Contact" data-orig-src="images/u723-4.png?crc=3951033455" data-image-width="100" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
      <div class="MenuItemContainer borderbox clearfix grpelem temp_no_id" data-orig-id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="media.html" data-orig-id="u238"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u239-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=4147028457" data-image-width="86" src="images/blank.gif?crc=4208392903"/></div></div><div class="borderbox grpelem temp_no_id" data-orig-id="u240"><!-- content --></div></a>
-      <div class="SubMenu MenuLevel1 borderbox clearfix temp_no_id" data-orig-id="u242"><!-- vertical box -->
-       <ul class="SubMenuView borderbox clearfix colelem temp_no_id" data-orig-id="u243"><!-- vertical box -->
-        <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u480"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix grpelem temp_no_id" href="photos.html" data-orig-id="u482"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u486-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u486-4_clip"><img class="temp_no_img_src" alt="Photos" data-orig-src="images/u486-4.png?crc=307953479" data-image-width="92" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-        <li class="MenuItemContainer borderbox clearfix colelem temp_no_id" data-orig-id="u501"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem temp_no_id" href="videos.html" data-orig-id="u502"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u505-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u505-4_clip"><img class="temp_no_img_src" alt="Videos" data-orig-src="images/u505-4.png?crc=196056032" data-image-width="95" src="images/blank.gif?crc=4208392903"/></div></div></a></li>
-       </ul>
-      </div>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="media.html" data-orig-id="u238"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem temp_no_id" data-orig-id="u239-4"><!-- rasterized frame --><div class="temp_no_id" data-orig-id="u239-4_clip"><img class="temp_no_img_src" alt="media" data-orig-src="images/u239-4.png?crc=104423217" data-image-width="100" src="images/blank.gif?crc=4208392903"/></div></div></a>
      </div>
     </nav>
     <span class="verticalspacer placeholder" data-placeholder-for="page_4_content"><!-- placeholder node --></span>
